@@ -1,3 +1,12 @@
+2017-07-31  Mark Lam  <mark.lam@apple.com>
+
+        Added some UNLIKELYs to operationOptimize().
+        https://bugs.webkit.org/show_bug.cgi?id=174976
+
+        Reviewed by JF Bastien.
+
+        * jit/JITOperations.cpp:
+
 2017-07-31  Keith Miller  <keith_miller@apple.com>
 
         Make more things LLInt constexprs
